--- a/style.css
+++ b/style.css
@@ -2083,12 +2083,13 @@ a#attention .courseName {
   background: url("./images/img/Asset 3.png") no-repeat;
   width: 5em;
   display: inline-block;
-  background-size: cover;
+  background-size: contain;
   position: absolute;
   bottom: 0;
   top: .2em;
   right: .2em;
   height: 5.64em;
+  background-position: center;
 }
 
 .outlet .mainPageSection.Qcomment .contain header::after {
@@ -2097,12 +2098,13 @@ a#attention .courseName {
   width: 4em;
   height: 3.4em;
   display: inline-block;
-  background-size: cover;
+  background-size: contain;
   position: absolute;
   top: 0;
   bottom: 0;
   margin: auto;
   left: 2em;
+  background-position: center;
 }
 
 .outlet .mainPageSection.Qcomment .contain .forms {
